// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New code measures should be rendered properly 1`] = `
<Fragment>
  <DateTimeFormatter
    date="2018-01-01"
  >
    <Component />
  </DateTimeFormatter>
  <div
    className="display-flex-row display-flex-space-between"
  >
    <ProjectCardMeasure
      className="flex-0"
      key="new_bugs"
      label="metric.bugs.name"
      metricKey="new_bugs"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="new_bugs"
        metricType="SHORT_INT"
        value="8"
      />
      <span
        className="big"
      >
        <Rating
          value="1.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      key="new_vulnerabilities"
      label="metric.vulnerabilities.name"
      metricKey="new_vulnerabilities"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="new_vulnerabilities"
        metricType="SHORT_INT"
        value="2"
      />
      <span
        className="big"
      >
        <Rating
          value="2.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      iconKey="security_hotspots"
      key="new_security_hotspots_reviewed"
      label="projects.security_hotspots_reviewed"
      metricKey="new_security_hotspots_reviewed"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="new_security_hotspots_reviewed"
        metricType="PERCENT"
      />
      <span
        className="big"
      >
        <Rating />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      key="new_code_smells"
      label="metric.code_smells.name"
      metricKey="new_code_smells"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="new_code_smells"
        metricType="SHORT_INT"
        value="0"
      />
      <span
        className="big"
      >
        <Rating
          value="1.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      label="metric.coverage.name"
      metricKey="new_coverage"
    >
      <div
        className="display-flex-center"
      >
        <Measure
          className="big"
          metricKey="new_coverage"
          metricType="PERCENT"
          value="26.55"
        />
        <span
          className="spacer-left project-card-measure-secondary-info"
        >
          <CoverageRating
            value="26.55"
          />
        </span>
      </div>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      label="metric.duplicated_lines_density.short_name"
      metricKey="new_duplicated_lines_density"
    >
      <div
        className="display-flex-center"
      >
        <Measure
          className="big"
          metricKey="new_duplicated_lines_density"
          metricType="PERCENT"
          value="0.55"
        />
        <span
          className="spacer-left project-card-measure-secondary-info"
        >
          <DuplicationsRating
            value={0.55}
          />
        </span>
      </div>
    </ProjectCardMeasure>
  </div>
</Fragment>
`;

exports[`Overall measures should be not be rendered if there's no line of code: application 1`] = `
<div
  className="note big-spacer-top"
>
  portfolio.app.empty
</div>
`;

exports[`Overall measures should be not be rendered if there's no line of code: project 1`] = `
<div
  className="note big-spacer-top"
>
  overview.project.main_branch_empty
</div>
`;

exports[`Overall measures should be rendered properly 1`] = `
<Fragment>
  <div
    className="display-flex-row display-flex-space-between"
  >
    <ProjectCardMeasure
      className="flex-0"
      key="bugs"
      label="metric.bugs.name"
      metricKey="bugs"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="bugs"
        metricType="SHORT_INT"
        value="17"
      />
      <span
        className="big"
      >
        <Rating
          value="1.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      key="vulnerabilities"
      label="metric.vulnerabilities.name"
      metricKey="vulnerabilities"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="vulnerabilities"
        metricType="SHORT_INT"
        value="0"
      />
      <span
        className="big"
      >
        <Rating
          value="1.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      iconKey="security_hotspots"
      key="security_hotspots_reviewed"
      label="projects.security_hotspots_reviewed"
      metricKey="security_hotspots_reviewed"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="security_hotspots_reviewed"
        metricType="PERCENT"
      />
      <span
        className="big"
      >
        <Rating />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      key="code_smells"
      label="metric.code_smells.name"
      metricKey="code_smells"
    >
      <Measure
        className="spacer-right big project-card-measure-secondary-info"
        metricKey="code_smells"
        metricType="SHORT_INT"
        value="132"
      />
      <span
        className="big"
      >
        <Rating
          value="1.0"
        />
      </span>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      label="metric.coverage.name"
      metricKey="coverage"
    >
      <div
        className="display-flex-center"
      >
        <Measure
          className="big"
          metricKey="coverage"
          metricType="PERCENT"
          value="88.3"
        />
        <span
          className="spacer-left project-card-measure-secondary-info"
        >
          <CoverageRating
            value="88.3"
          />
        </span>
      </div>
    </ProjectCardMeasure>
    <span
      className="bordered-left little-spacer"
    />
    <ProjectCardMeasure
      label="metric.duplicated_lines_density.short_name"
      metricKey="duplicated_lines_density"
    >
      <div
        className="display-flex-center"
      >
        <Measure
          className="big"
          metricKey="duplicated_lines_density"
          metricType="PERCENT"
          value="9.8"
        />
        <span
          className="spacer-left project-card-measure-secondary-info"
        >
          <DuplicationsRating
            value={9.8}
          />
        </span>
      </div>
    </ProjectCardMeasure>
  </div>
</Fragment>
`;
